Windows Vista Style: Draw dock widget title with Qt::TextShowMnemonic

Align with the other styles.

Task-number: QTBUG-54485
Change-Id: Ic8d008c59f5acf858b8ba6fbea5dd30b8aa9634c
Reviewed-by: Andy Shaw <andy.shaw@qt.io>